[package]
name = "gsv"
version = "0.1.0"
authors = ["Chris Dickinson <christopher.s.dickinson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.17"
anyhow = "1.0.22"
colored = "1.9.0"
dirs = "2.0.2"
serde = "1.0.103"
serde_derive = "1.0.103"
surf = "1.0.3"
toml = "0.5.5"
urlencoding = "1.0.0"
regex = "1.3.1"

[dependencies.async-std]
version = "1.2.0"
features = ["attributes"]

